--- a/index.html
+++ b/index.html
@@ -8,12 +8,34 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Is your birthday an pallindrome?</h1>
+    <header>
+    <h1  className="header">Is your birthday an pallindrome?</h1>
+      </header>
    <main> 
     <input type="date" id="bday-input"/>
-    <button id="show-btn">Show</button>
+    <button id="show-btn" class="btn-check">Show</button>
     <div id="result"></div>
 </main>
+    <footer class="footer container">
+        <div class="footer-header">Connect with me on social media</div>
+        <ul class="social-links list-non-bullet">
+            <li class="list-item-inline">
+                <a class="link" href="https://www.linkedin.com/in/rodriguescarson">
+                    Linkedin
+                </a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="https://github.com/rodriguescarson">
+                    Github
+                </a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link" href="https://twitter.com/carsonmarz">
+                    twitter
+                </a>
+            </li>
+        </ul>
+    </footer>
     <script src="index.js"></script>
 </body>
 </html>
